--- a/sample.configs/16pDUPC5NSCHiC.distiller.yml
+++ b/sample.configs/16pDUPC5NSCHiC.distiller.yml
@@ -26,7 +26,7 @@ input:
     raw_reads_paths:
         # substitute the location of your fastq files:
         # an example of a 1-lane library:
-        16p.DUPC5.NSC.HiC:
+        16p.DUP.C5.NSC.HiC:
           lane1:
             - /data/talkowski/Samples/16p_HiC/fastq/22LCC2LT4_3_2148261314_16pDUPC5NSCHiC_S3_L003_R1_001.fastq.gz
             - /data/talkowski/Samples/16p_HiC/fastq/22LCC2LT4_3_2148261314_16pDUPC5NSCHiC_S3_L003_R2_001.fastq.gz
@@ -173,10 +173,10 @@ bin:
 ########################################
 output:
     dirs:
-        processed_fastqs: '/data/talkowski/Samples/16p_HiC/results.NSC/processed_fastqs/16p.DUPC5.NSC.HiC'
-        mapped_parsed_sorted_chunks: '/data/talkowski/Samples/16p_HiC/results.NSC/mapped_parsed_sorted_chunks/16p.DUPC5.NSC.HiC'
-        fastqc: '/data/talkowski/Samples/16p_HiC/results.NSC/fastqc/16p.DUPC5.NSC.HiC'
-        pairs_library: '/data/talkowski/Samples/16p_HiC/results.NSC/pairs_library/16p.DUPC5.NSC.HiC'
-        coolers_library: '/data/talkowski/Samples/16p_HiC/results.NSC/coolers_library/16p.DUPC5.NSC.HiC'
-        coolers_library_group: '/data/talkowski/Samples/16p_HiC/results.NSC/coolers_library_group/16p.DUPC5.NSC.HiC'
-        stats_library_group: '/data/talkowski/Samples/16p_HiC/results.NSC/stats_library_group/16p.DUPC5.NSC.HiC'
+        processed_fastqs: '/data/talkowski/Samples/16p_HiC/results/processed_fastqs/16p.DUP.C5.NSC.HiC'
+        mapped_parsed_sorted_chunks: '/data/talkowski/Samples/16p_HiC/results/mapped_parsed_sorted_chunks/16p.DUP.C5.NSC.HiC'
+        fastqc: '/data/talkowski/Samples/16p_HiC/results/fastqc/16p.DUP.C5.NSC.HiC'
+        pairs_library: '/data/talkowski/Samples/16p_HiC/results/pairs_library/16p.DUP.C5.NSC.HiC'
+        coolers_library: '/data/talkowski/Samples/16p_HiC/results/coolers_library/16p.DUP.C5.NSC.HiC'
+        coolers_library_group: '/data/talkowski/Samples/16p_HiC/results/coolers_library_group/16p.DUP.C5.NSC.HiC'
+        stats_library_group: '/data/talkowski/Samples/16p_HiC/results/stats_library_group/16p.DUP.C5.NSC.HiC'
