--- a/sample.configs/16p.NSC.WT.FACS1.TR1.distiller.yml
+++ b/sample.configs/16p.NSC.WT.FACS1.TR1.distiller.yml
@@ -47,8 +47,7 @@ input:
         chrom_sizes_path: '/data/talkowski/tools/ref/Hi_c_noalt/GRCh38_no_alt_analysis_set_GCA_000001405.15.chrom.sizes'
 
 # Choose if you want to do FastQC of the input files:
-# do_fastqc: True
-do_fastqc: true
+do_fastqc: True
 
 # Control how reads are mapped to the reference genomes.
 map:
@@ -58,8 +57,8 @@ map:
     # The optimal chunk size is defined by the balance between mapping and merging.
     # Smaller chunks (~30M) are better for clusters with many weak nodes,
     # however, having >~10 chunks per run slow down merging.
-    chunksize: 0
-    # chunksize: 100000000 # 100,000,000
+    chunksize: 0 
+    # chunksize: 100000000  # 100,000,000
 
     # Specify extra BWA mapping options.
     mapping_options: ''
@@ -164,7 +163,6 @@ bin:
     # Multiple filters are allowed; for each filter, all pairs satisfying the
     # given filter expression will be binned into a separate cooler.
     # Filters are specified using the following syntax:
-    # {filter_name}: '{a valid Python expression}'
     filters:
         no_filter: ''
         mapq_30: '(mapq1>=30) and (mapq2>=30)'
