--- a/sample.configs/16p.NSC.WT.p49.TR1.distiller.yml
+++ b/sample.configs/16p.NSC.WT.p49.TR1.distiller.yml
@@ -23,13 +23,13 @@
 # -- sra:<SRA_NUMBER>, optionally followed by the indices of the first and
 # the last entry in the SRA in the form of "?start=<first>&end=<last>
 input:
-  raw_reads_paths:
-    # substitute the location of your fastq files:
-    # an example of a 1-lane library:
-    16p.NSC.WT.p49.TR1:
-      lane1:
-        - /data/talkowski/Samples/16p_HiC/fastq/22LWWYLT4_3_3582217279_16pWTp49NSCHiC_S5_L003_R1_001.fastq.gz
-        - /data/talkowski/Samples/16p_HiC/fastq/22LWWYLT4_3_3582217279_16pWTp49NSCHiC_S5_L003_R2_001.fastq.gz
+    raw_reads_paths:
+        # substitute the location of your fastq files:
+        # an example of a 1-lane library:
+        16p.NSC.WT.p49.TR1:
+          lane1:
+            - /data/talkowski/Samples/16p_HiC/fastq/22LWWYLT4_3_3582217279_16pWTp49NSCHiC_S5_L003_R1_001.fastq.gz
+            - /data/talkowski/Samples/16p_HiC/fastq/22LWWYLT4_3_3582217279_16pWTp49NSCHiC_S5_L003_R2_001.fastq.gz
     # Truncate input fastqs to a small number of reads (e.g. 10000) for
     # semi-dry test runs.
     # NOTE: when the inputs are specified as an SRA number, only this number of
@@ -41,13 +41,13 @@ input:
     # of the reference genome, and a tab-separated table with contig sizes
     # (known as "chrom.sizes"). The latter is used to specify the subset and the
     # order of contigs in a resulting contact map.
-  genome:
-    assembly_name: 'hg38'
-    bwa_index_wildcard_path: '/data/talkowski/tools/ref/Hi_c_noalt/GRCh38_no_alt_analysis_set_GCA_000001405.15.fasta.*'
-    chrom_sizes_path: '/data/talkowski/tools/ref/Hi_c_noalt/GRCh38_no_alt_analysis_set_GCA_000001405.15.chrom.sizes'
+    genome:
+        assembly_name: 'hg38'
+        bwa_index_wildcard_path: '/data/talkowski/tools/ref/Hi_c_noalt/GRCh38_no_alt_analysis_set_GCA_000001405.15.fasta.*'
+        chrom_sizes_path: '/data/talkowski/tools/ref/Hi_c_noalt/GRCh38_no_alt_analysis_set_GCA_000001405.15.chrom.sizes'
 
 # Choose if you want to do FastQC of the input files:
-do_fastqc: true
+do_fastqc: True
 
 # Control how reads are mapped to the reference genomes.
 map:
@@ -58,7 +58,7 @@ map:
     # Smaller chunks (~30M) are better for clusters with many weak nodes,
     # however, having >~10 chunks per run slow down merging.
     chunksize: 0 
-    # chunksize: 100000000 # 100,000,000
+    # chunksize: 100000000  # 100,000,000
 
     # Specify extra BWA mapping options.
     mapping_options: ''
@@ -163,7 +163,6 @@ bin:
     # Multiple filters are allowed; for each filter, all pairs satisfying the
     # given filter expression will be binned into a separate cooler.
     # Filters are specified using the following syntax:
-    # {filter_name}: '{a valid Python expression}'
     filters:
         no_filter: ''
         mapq_30: '(mapq1>=30) and (mapq2>=30)'
@@ -179,4 +178,4 @@ output:
         pairs_library: '/data/talkowski/Samples/16p_HiC/results/pairs_library/16p.NSC.WT.p49.TR1'
         coolers_library: '/data/talkowski/Samples/16p_HiC/results/coolers_library/16p.NSC.WT.p49.TR1'
         coolers_library_group: '/data/talkowski/Samples/16p_HiC/results/coolers_library_group/16p.NSC.WT.p49.TR1'
-        tats_library_group: '/data/talkowski/Samples/16p_HiC/results/stats_library_group/16p.NSC.WT.p49.TR1'
+        stats_library_group: '/data/talkowski/Samples/16p_HiC/results/stats_library_group/16p.NSC.WT.p49.TR1'
