--- a/sample.configs/16p.iN.DEL.A12.TR4.distiller.yml
+++ b/sample.configs/16p.iN.DEL.A12.TR4.distiller.yml
@@ -26,10 +26,10 @@ input:
     raw_reads_paths:
         # substitute the location of your fastq files:
         # an example of a 1-lane library:
-        16p.NSC.DEL.H10.TR1:
+        16p.iN.DEL.A12.TR4:
           lane1:
-            - /data/talkowski/Samples/16p_HiC/fastq/22LWWYLT4_3_3582217279_16pDELH10NSCHiC_S1_L003_R1_001.fastq.gz
-            - /data/talkowski/Samples/16p_HiC/fastq/22LWWYLT4_3_3582217279_16pDELH10NSCHiC_S1_L003_R2_001.fastq.gz
+            - /data/talkowski/Samples/16p_HiC/fastq/235HWFLT4_4_0454940113_16pDELA12iNHiCT4_S1_L004_R1_001.fastq.gz
+            - /data/talkowski/Samples/16p_HiC/fastq/235HWFLT4_4_0454940113_16pDELA12iNHiCT4_S1_L004_R2_001.fastq.gz
     # Truncate input fastqs to a small number of reads (e.g. 10000) for
     # semi-dry test runs.
     # NOTE: when the inputs are specified as an SRA number, only this number of
@@ -58,7 +58,7 @@ map:
     # Smaller chunks (~30M) are better for clusters with many weak nodes,
     # however, having >~10 chunks per run slow down merging.
     chunksize: 0 
-    # chunksize: 100000000 # 100,000,000
+    # chunksize: 100000000  # 100,000,000
 
     # Specify extra BWA mapping options.
     mapping_options: ''
@@ -163,7 +163,6 @@ bin:
     # Multiple filters are allowed; for each filter, all pairs satisfying the
     # given filter expression will be binned into a separate cooler.
     # Filters are specified using the following syntax:
-    # {filter_name}: '{a valid Python expression}'
     filters:
         no_filter: ''
         mapq_30: '(mapq1>=30) and (mapq2>=30)'
@@ -173,10 +172,10 @@ bin:
 ########################################
 output:
     dirs:
-        processed_fastqs: '/data/talkowski/Samples/16p_HiC/results/processed_fastqs/16p.NSC.DEL.H10.TR1'
-        mapped_parsed_sorted_chunks: '/data/talkowski/Samples/16p_HiC/results/mapped_parsed_sorted_chunks/16p.NSC.DEL.H10.TR1'
-        fastqc: '/data/talkowski/Samples/16p_HiC/results/fastqc/16p.NSC.DEL.H10.TR1'
-        pairs_library: '/data/talkowski/Samples/16p_HiC/results/pairs_library/16p.NSC.DEL.H10.TR1'
-        coolers_library: '/data/talkowski/Samples/16p_HiC/results/coolers_library/16p.NSC.DEL.H10.TR1'
-        coolers_library_group: '/data/talkowski/Samples/16p_HiC/results/coolers_library_group/16p.NSC.DEL.H10.TR1'
-        stats_library_group: '/data/talkowski/Samples/16p_HiC/results/stats_library_group/16p.NSC.DEL.H10.TR1'
+        processed_fastqs: '/data/talkowski/Samples/16p_HiC/results/processed_fastqs/16p.iN.DEL.A12.TR4'
+        mapped_parsed_sorted_chunks: '/data/talkowski/Samples/16p_HiC/results/mapped_parsed_sorted_chunks/16p.iN.DEL.A12.TR4'
+        fastqc: '/data/talkowski/Samples/16p_HiC/results/fastqc/16p.iN.DEL.A12.TR4'
+        pairs_library: '/data/talkowski/Samples/16p_HiC/results/pairs_library/16p.iN.DEL.A12.TR4'
+        coolers_library: '/data/talkowski/Samples/16p_HiC/results/coolers_library/16p.iN.DEL.A12.TR4'
+        coolers_library_group: '/data/talkowski/Samples/16p_HiC/results/coolers_library_group/16p.iN.DEL.A12.TR4'
+        stats_library_group: '/data/talkowski/Samples/16p_HiC/results/stats_library_group/16p.iN.DEL.A12.TR4'
