--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,10 @@ hs_*.log
 
 # Data
 fastq/
-publicData/
+public.data/
 
 # Results
 results/
-results.NSC/
 old.results
 *.html
 notebooks/*.md
@@ -22,9 +21,8 @@ notebooks/*_files/
 ._*
 
 # nextflow stuff
-sample.configs/NSC.distiller.yml
 sample.configs/template.distiller.yml
-sample.configs/testing/
+reference.files/genome.reference/
 distiller-nf/
 pipeline_info
 .nextflow*
@@ -47,36 +45,3 @@ work*
 # Output files from R CMD build
 /*.tar.gz
 
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
-public.data
