misc cleaning and bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ reference.files/genome.tracks
 reference.files/gene.constraints.CNVR.tsv
 reference.files/packages/
 
+NDV.misc
+reference.files/CTCF.annotations.tsv
+.Rprofile
